// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GnoVault deposit deposit 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 80406,
}
`;

exports[`GnoVault pulls withdrawals on claim exited assets 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 95889,
}
`;

exports[`GnoVault swap xdai to gno can swap all xdai to gno 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 130585,
}
`;

exports[`GnoVault swap xdai to gno skips swapping when balance less than 1 gwei xdai 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 29184,
}
`;
